fixed alignment on style.css

--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@ body {
 
 table {
     background-color: white;
+    text-align: center;
+    margin-left: auto; 
+    margin-right: auto;
     padding-left: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-right: 100px;
+    padding-right: 50px;
     box-shadow: 0px 0px 8px 5px #0000003b;
 }
